Fix horizontal scroll in mobile with --with-gutter

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -133,7 +133,7 @@
     }
 
     &--with-gutter {
-      ._width(-@spacing / 2);
+      width: 100%;
       @media @desktop {
         ._width-desktop(-@spacing / 2);
       }
